--- a/css/contact.css
+++ b/css/contact.css
@@ -8,7 +8,7 @@
   margin-right: auto;
   padding: 100px 50px;
   height: 450px;
-  background-image: url("footer.png");
+  background-image: url("/assets/footer.png");
   display: flex;
   flex-wrap: wrap;
   gap: 80px;
